# genetic

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  NEWS.md  README.md  TODO.md  aclocal.m4  config.h.in  configure  configure.ac  genetics.py  travis-windows-setup.sh
.github/workflows/: test.yml
src/: CMakeLists.txt  Makefile.am  Makefile.in  beef.cc  beef.h  beef_main.cc  expand_test.cc  fakerandom.h  gen_alg.cc  gen_alg.h  genetic_string.cc  genetic_string.h  getopt_rpc.c  main.c  main.cc  main.h  mancala.cc  mancala.h  random_inrange.cc  simple_test.cc
src/implementations/: CMakeLists.txt
src/implementations/beef/: CMakeLists.txt  beef.cc  beef.h  gen_beef.cc  gen_beef.h
src/implementations/beef/beef_test/: hello_bad.bf  hello_world.bf
src/implementations/mancala/: gen_manc.cc  main.cc  main.h
src/mancala/: CMakeLists.txt  gen_manc.h  mancala.cc  mancala.h  play_mancala.cc
src/rpc/: fakerandom.h  getopt_rpc.h
src/test/: simple.sh
test/: CMakeLists.txt  Makefile.am  Makefile.in  each_mut.sh  each_mut.sh.in  expand.sh  expand.sh.in  expand_test.cc  rand_range.sh  rand_range.sh.in  random_inrange.cc  sanity  sanity.in  simple.sh.in  some_pops.sh  some_pops.sh.in
